--- a/estilo.css
+++ b/estilo.css
@@ -9,6 +9,7 @@
     --black: #000;
     --white: #FFF;
 }
+/* Cabeçalho */
 .header {
     background-image: url(./img/banner.jpeg);
     padding: 2rem;
@@ -40,6 +41,7 @@ header nav ul li a {
     color: var(--white);
     font-size: x-large;
 }
+/* Início */
 main.inicio div {
     margin: 0.5rem;
 }
@@ -81,8 +83,12 @@ table{
     border-collapse: collapse;
 }
 /* Âncora */
+#topo {
+    overflow-y: hidden;
+}
 section {
     margin: 0.5rem;
+    height: 100vh;
 }
 section ol li {
     margin: 1rem;
@@ -103,6 +109,15 @@ section ol li a {
     text-decoration: none;
     color: var(--black);
 }
+#resposta4 a {
+    text-decoration: none;
+    color: var(--black);
+}
+#resposta5 a {
+    text-decoration: none;
+    color: var(--black);
+}
+/* Rodapé */
 footer {
     background-color: var(--primary);
     height: 2rem;
