--- a/estilo.css
+++ b/estilo.css
@@ -117,6 +117,13 @@ section ol li a {
     text-decoration: none;
     color: var(--black);
 }
+/* Formulário */
+form {
+    display: flex;
+    justify-content: center;
+    margin-top: 1rem;
+    padding: 0.5;
+}
 /* Rodapé */
 footer {
     background-color: var(--primary);
